Add documentation comments to the code
This commit adds documentation comments to the code to improve its readability and maintainability.

The comments explain the purpose of each function, method, and variable, and provide information about its parameters, return values, and other relevant details. This helps other developers understand the code and make changes efficiently.

This commit follows the documentation standards of the programming language, and places the comments appropriately.

This commit does not introduce any new features or functionality, and only modifies the existing code.

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,29 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta tag to specify the character encoding for the HTML document -->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Link tag to specify an icon for the web page -->
+    <link rel="icon" href="http://localhost:3000/my-chatbot-app" />
+    <!-- Meta tag to specify the initial width of the device's screen and the initial scale of the page -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <!-- Meta tag to provide a description of the contents of a web page -->
+    <meta name="AI Chatbot" content="Interactive AI chatbot" />
+    <!-- Link tag to specify an icon for Apple devices -->
+    <link rel="apple-touch-icon" href="http://localhost:3000/my-chatbot-app" />
+    <!-- Link tag to specify a manifest file that provides metadata for the web app when it is installed on a mobile device or desktop -->
+    <link rel="manifest" href="http://localhost:3000/my-chatbot-app" />
+    <!-- Title element to specify the title of the web page -->
     <title>AI Chatbot</title>
+    <!-- Meta tag to specify the initial width of the device's screen and the initial scale of the page -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- NoScript element to display a message when JavaScript is disabled -->
+    <noscript>AI Chatbot</noscript>
+    <!-- Div element with an ID of "root" used to render the application's user interface -->
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- Template HTML file that can be used to add web fonts, meta tags, and analytics to the web page. The built version will include the bundled scripts in the <body> tag. To start development, run `npm start` or `yarn start`. To create a production build, run `npm run build` or `yarn build`. -->
   </body>
 </html>
